--- a/index.html
+++ b/index.html
@@ -34,46 +34,43 @@
           <li role="presentation"><a href="approach.html">Approach</a></li>
         </ul>
       </nav>
-      <h3 class="text-muted">Understanding Origins and Fusion of Music Genres</h3>
+      <h3 class="text-muted">Understanding the location of fashion rental service users</h3>
     </div>
 
     <br>
 
-    <div class="lead" id="team">Team: Anurag Gandhi, Jamie Diner, Rachel Wong, Shouvik Mani, Taranveer Singh</div>
+    <div class="lead" id="team">Kedi Zhang</div>
 
     <h4>Introduction</h4>
-    <p>In this guided narrative, we tell a story about the evolution of music genres over the decades. We use a series of interactive visualizations to illustrate how various genres emerged and coexisted over time. Specifically, we ask the following questions:</p>
+    <p>placeholder</p>
     <ol>
-        <li>How have different genres emerged and died over time?</li>
-        <li>How has the compatibility of different fusion genres changed over time?</li>
-        <li>Can we infer why two genres are compatible?</li>
+        <li>placeholder</li>
+        <li>placeholder</li>
+        <li>placeholder</li>
     </ol>
-    <p>Before we begin, we will introduce the concept of <a href="https://en.wikipedia.org/wiki/Category:Fusion_music_genres" target="_blank">fusion music genres</a>, which are are fusions of various historical genres. People have been experimenting with combining instruments for centuries - or even millennia. Some combinations of instruments that we are familiar with today evolved over hundreds of years. Others were the result of necessity, or an accident, or a crazy idea at the spur of the moment.</p>
-    <p>In our exploration, we will be looking at how these fusion genres have evolved over time. This is important because understanding different fusion genres is complex when you have so many different types of music. Our visualizations could be used to study the history of music and identify which fusion genres were really successful. They could also tell us which genres were compatible in the past, providing musicians with valuable insights to bring back lost fusion genres.</p>
+    <p>placeholder</p>
 
     <br>
 
     <h4>About the Dataset</h4>
-    <p>We use the <a href="https://labrosa.ee.columbia.edu/millionsong/" target="_blank">Million Song Dataset</a> from Columbia University's LAB ROSA. It contains a collection of audio features and metadata for a million contemporary popular music tracks. For more details on the dataset, see <a href="/dataquality.html">data quality</a>.</p>
-    <p>After processing the data, we obtain a table for each decade showing the number of shared (cross-tagged) songs between genres. Here is the shared songs table for the 1990s. It says that, for example, there were 800 songs that were tagged as both Alternative and Blues.</p>
+    <p>placeholderplaceholderplaceholder</p>
 
     <div id='data-table-container'>
-        <table id='data-table' class="table table-bordered table-hover"><thead><tr style=text-align:right><th><th>Genre<th>Alternative<th>Blues<th>Country<th>Dance<th>Disco<th>Electronic<th>Folk<th>Indie<th>Jazz<th>Latin<th>Metal<th>Pop<th>Rap<th>Reggae<th>Rock<tbody><tr><th>0<td>alternative<td>11821<td>800<td>547<td>1955<td>452<td>2337<td>1463<td>5178<td>1291<td>255<td>2220<td>6092<td>1014<td>268<td>9967<tr><th>1<td>blues<td>800<td>6194<td>472<td>615<td>175<td>251<td>566<td>491<td>1472<td>62<td>299<td>1640<td>375<td>67<td>2737<tr><th>2<td>country<td>547<td>472<td>4315<td>354<td>62<td>97<td>838<td>449<td>196<td>41<td>87<td>996<td>82<td>24<td>1595<tr><th>3<td>dance<td>1955<td>615<td>354<td>8229<td>1140<td>3430<td>463<td>1039<td>1595<td>397<td>581<td>4152<td>848<td>601<td>3463<tr><th>4<td>disco<td>452<td>175<td>62<td>1140<td>2030<td>762<td>126<td>285<td>486<td>85<td>155<td>1221<td>189<td>45<td>916<tr><th>5<td>electronic<td>2337<td>251<td>97<td>3430<td>762<td>8741<td>426<td>1290<td>2116<td>175<td>764<td>3144<td>560<td>178<td>3229<tr><th>6<td>folk<td>1463<td>566<td>838<td>463<td>126<td>426<td>4927<td>1172<td>565<td>194<td>601<td>1796<td>177<td>70<td>2729<tr><th>7<td>indie<td>5178<td>491<td>449<td>1039<td>285<td>1290<td>1172<td>7884<td>706<td>102<td>735<td>4611<td>528<td>138<td>6347<tr><th>8<td>jazz<td>1291<td>1472<td>196<td>1595<td>486<td>2116<td>565<td>706<td>10519<td>443<td>471<td>2244<td>783<td>166<td>2494<tr><th>9<td>latin<td>255<td>62<td>41<td>397<td>85<td>175<td>194<td>102<td>443<td>2038<td>108<td>827<td>120<td>105<td>829<tr><th>10<td>metal<td>2220<td>299<td>87<td>581<td>155<td>764<td>601<td>735<td>471<td>108<td>9941<td>1304<td>602<td>92<td>5451<tr><th>11<td>pop<td>6092<td>1640<td>996<td>4152<td>1221<td>3144<td>1796<td>4611<td>2244<td>827<td>1304<td>18551<td>1220<td>411<td>11167<tr><th>12<td>rap<td>1014<td>375<td>82<td>848<td>189<td>560<td>177<td>528<td>783<td>120<td>602<td>1220<td>4283<td>214<td>1502<tr><th>13<td>reggae<td>268<td>67<td>24<td>601<td>45<td>178<td>70<td>138<td>166<td>105<td>92<td>411<td>214<td>2196<td>888<tr><th>14<td>rock<td>9967<td>2737<td>1595<td>3463<td>916<td>3229<td>2729<td>6347<td>2494<td>829<td>5451<td>11167<td>1502<td>888<td>31295</table>
+    <a herf="https://www.instagram.com/explore/tags/letote/"></a>
     </div>
 
     <br><hr>
 
-    <h4>Visualization 1: Emergence and Death of Genres</h4>
-    <i>Question: How have different genres emerged and died over time?</i>
+    <h4>Visualization 1: placeholderplaceholderplaceholder</h4>
+    <i>Question: placeholderplaceholderplaceholder</i>
     <br><br>
     <div id="line-graph">
-        <p><b>Number of Popular Songs vs. Year Per Genre</b></p>
-        <img id="line-graph-image" src="static/line-graph.png">
+        <p><b>placeholderplaceholderplaceholder</b></p>
+        <!-- <img id="line-graph-image" src="static/line-graph.png"> -->
     </div>
-    <p>From 1950s to 1980s, most of the genres had a similar gradual rise. An exception is Blues,  which declined in the 80s. Electronic music started becoming very popular in the 80s.</p>
-    <p>1990s (and subsequently 2000s) saw a huge increase in popularity for most of the genres, especially, rock, pop, electronic and indie. This is the decade when music sharing became popular (rise of MP3 and digital downloads)  and independent labels grew.</p>
+    <p>placeholderplaceholderplaceholder</p>
 
-
+<!-- 
     <br>
 
     <h4>Visualization 2: Compatibility of Genres</h4>
@@ -162,37 +159,33 @@
             </div>
         </div>
     </div>
-
-    <br><br><hr>
+-->
+    <br><br><hr> 
 
     <h4>Analysis</h4>
-    <i>Question: Can we infer why two genres are compatible?</i>
+    <i>Question: placeholderplaceholderplaceholder</i>
     <br><br>
-    <p>When we compare the heatmap and chord diagram for a single decade, we can gain some valuable insights. For example, consider the two visualizations for the 1980s.</p>
+    <p>placeholderplaceholderplaceholder</p>
 
     <img class="analysis-images" src="static/chord_1980s.png">
     <img class="analysis-images" src="static/heatmap_1980s.png">
 
-    <p>From the chord diagram, we see that rock is most compatible with pop, dance, metal, and indie (wide chords between genres). Similarly, the heatmap tells us that rock is most compatible with indie, pop, metal, and alternative (dark red values). These findings from the heatmap correlates with those from the chord diagram. This supports the hypothesis that these genres are not only most compatible in terms of the number of shared songs, but also in their acoustics.</p>
+    <p>placeholderplaceholderplaceholder</p>
 
-    <p>There are however, some contradictory findings as well. From the heatmap, we can see that rock is least similar in terms of acoustics to reggae, folk, jazz, rap, and blues. However, the chord diagram does not indicate low compatibility with some of these genres. For example, folk has high proportion of shared songs with rock. These contradictions might arise due to several reasons:</p>
+    <p>placeholderplaceholderplaceholder</p>
 
     <ul>
-        <li>We may be missing features in our analysis to gauge similarity between genres. For instance, we don't have song lyrics.</li>
-        <li>Different tags for genres – e.g. folk is also sometimes called world music. We might have missed several such data points because we used regex to group genres.</li>
-        <li>Mislabeling of genres by users</li>
+        <li>placeholderplaceholderplaceholder</li>
     </ul>
 
     <hr>
 
     <h4>Conclusion</h4>
-    <p>Some of our key takeaways from this analysis are:</p>
+    <p>placeholderplaceholderplaceholder</p>
     <ul>
-        <li>The origin of different genres and their fusion with one another are coherent with historical and societal factors such as the emergence of popular artists and advancements in technology.</li>
-        <li>The number of shared songs between genres is coherent with acoustic similarity in most cases.</li>
-        <li>Genres have become more diversified and once-niche genres (like Electronic) have rapidly gained popularity in recent decades.</li>
+        <li>placeholderplaceholderplaceholder</li>
     </ul>
-    <p>For further investigation of this data, we would like to add acoustic similarity in the chord diagram instead of using a separate heatmap by changing the transparency of chord color based on acoustic similarity.</p>
+    <p>placeholderplaceholderplaceholder</p>
 
   </div>
 </body>
