--- a/index.html
+++ b/index.html
@@ -188,13 +188,16 @@
 
     <i>Question: Does renttherunway dominate across US?</i>
     <br>    
-    <img class="analysis-images" height = "200px" src="images/east.png">
-    <img class="analysis-images" align = "right" height = "200px" src="images/bay.png">
-    <p>Left: Northeast Area and New York City</p>
-    <p>Right: The Bay Area and Downtown San Francisco</p>
+
+    <iframe src="https://cdn.datamatic.io/runtime/echarts/3.7.2_230/embedded/index.html#id=116500766452596807846/1Jk0Arzj_hcY2VwtmfjggU0hlzvcqNshX" frameborder="0" width="100%" height="443" allowtransparency="true"></iframe>
     <p>Renttherunway was launched in 2009 with 505 employee currently. On contrast, Letote is established in 2012 with a group of employee arounf 150. Letote is still under Series C funding, so there is gap between the volumn of two companies.
         The plots above clearly shows the dominance of RentTheRunway in east costal area. However, in the bay area where Letote was launched, ladies are open to both brands and many of them are subscribing both services (shown in orange dots).
     </p>
+    <img class="analysis-images" width = "100%" src="images/ec.png">
+    <p>North, East Area and New York City</p>
+    <img class="analysis-images" width = "100%" src="images/ca.png">
+    <p>California and Downtown San Francisco</p>
+
     
     <!-- <img class="analysis-images" height = "200px" src="images/nyc.png"> -->
     
