--- a/approach.html
+++ b/approach.html
@@ -25,25 +25,25 @@
 
 <body>
 
-<div class="container">
-        <div class="header clearfix">
-            <nav>
-                <br>
+  <div class="container">
+    <div class="header clearfix">
+      <nav>
+          <br>
         <ul class="nav nav-pills pull-right">
-          <li role="presentation" class="active"><a href="">Home</a></li>
+          <li role="presentation"><a href="index.html">Home</a></li>
           <li role="presentation"><a href="dataquality.html">Quality</a></li>
-          <li role="presentation"><a href="approach.html">Approach</a></li>
+          <li role="presentation"class="active"><a href="">Approach</a></li>
         </ul>
-    </nav>
+      </nav>
+      <br>
+      <br>
+      <hr>
+      <h3 class="text-muted">Understanding Fashion Rental Service Subscriber</h3>
+    </div>
     <br>
-    <br>
-    <hr>
-    <h3 class="text-muted">Understanding Fashion Rental Service Subscriber</h3>
-  </div>
-  <br>
 
-  <div class="lead" id="team">Kedi Zhang</div>
-  <hr>
+    <div class="lead" id="team">Kedi Zhang</div>
+    <hr>
 
     <h4>Introduction</h4>
     <p>Rental fashion is emerging these year as a part of shared economy. This data visualization focus on comparing two major player in US market:
