--- a/dataquality.html
+++ b/dataquality.html
@@ -30,8 +30,8 @@
             <nav>
                 <br>
         <ul class="nav nav-pills pull-right">
-          <li role="presentation" class="active"><a href="">Home</a></li>
-          <li role="presentation"><a href="dataquality.html">Quality</a></li>
+          <li role="presentation"><a href="index.html">Home</a></li>
+          <li role="presentation"class="active"><a href="">Quality</a></li>
           <li role="presentation"><a href="approach.html">Approach</a></li>
         </ul>
     </nav>
