--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         The former brand provides rental of high-end dresses for special occasions, when the latter focus on daily casual dress.
         So far the visualization     
     </p>
-        <img src="images/banner.png" width = "100%" alt="Instagram">
+        <img src="images/banner.PNG" width = "100%" alt="Instagram">
     </iframe>
     <p></p>    
    
@@ -61,7 +61,7 @@
     <p>The data is scraped from Instagram since official API doesn't support location information of where the photo post is taken. When instagram user post each photo, they can add many tags to make the post more searchable, so I scrape the basic information (user name, location is any, post time, etc) of all the photo which has been attached with a "Letote" tag and "Renttherunway" tag.
     As the screenshot shown below, the user "thejessie_grace" has tagged "Letote" in her post at Chicago Riverwalk.
     </p>
-    <img src="images/datasource.png" width = "100%" alt="Instagram">
+    <img src="images/datasource.PNG" width = "100%" alt="Instagram">
     <p></p>
 
     <br><hr>
