--- a/approach.html
+++ b/approach.html
@@ -66,7 +66,7 @@
     <p>Besides quantitaive analysis I did for the interactive data science midterm project, the major part of this digital ethnography is qualitative. We have done a lot participative observation in digital scenarios by joining
         facebook groups, interviewing and observing users, subscribing and experiencing the service etc. For instance, the image below summarizes what kinds of actions a user with positive mood may do in a facebook group.
     </p>
-    <img width = "100%" src="images/ethno.png">    
+    <img width = "100%" src="images/ethno.PNG">    
 
     <br><br>
   </div>
